--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'com.just.agentweb:agentweb:4.1.3'
 
     implementation "io.reactivex.rxjava2:rxjava:2.2.14"
+    //implementation "io.reactivex:rxandroid:2.2.0"
 
     implementation "androidx.core:core-ktx:1.3.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
